syntax = "proto3";
package order;
option go_package = "/;orderpb";
import "google/protobuf/timestamp.proto";

service OrderService {
  rpc ConfirmOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderByID (GetOrderByIDRequest) returns (GetOrderByIDResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
  rpc ProcessOrder (ProcessOrderRequest) returns (ProcessOrderResponse);
  rpc ReturnOrder (ReturnOrderRequest) returns (ReturnOrderResponse);
}

message CreateOrderRequest {
  int64 order_id = 1;
  int64 user_id = 2;
  google.protobuf.Timestamp expiration_time = 3;
  int32 weight = 4;
  int32 cost = 5;
  string package_type = 6;
  bool is_additional_film = 7;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message Order {
  int64 order_id = 1;
  int64 user_id = 2;
  google.protobuf.Timestamp expiration_time = 3;
  string status = 4;
  int32 weight = 5;
  int32 cost = 6;
}

message GetOrderByIDRequest {
  int64 order_id = 1;
}

message GetOrderByIDResponse {
  Order order = 1;
}

message ListOrdersRequest {
  int64 user_id = 1;
  string status = 2;
  int64 last_id = 3;
  int32 limit = 4;
  string search_term = 5;
}
message ListOrdersResponse {
  repeated Order orders = 1;
}

message ProcessOrderRequest {
  int64 order_id = 1;
  int64 user_id = 2;
  string action = 3;
}

message ProcessOrderResponse {}

message ReturnOrderRequest {
  int64 order_id = 1;
}

message ReturnOrderResponse {}